--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,5 +53,8 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_menu2">Menu2</string>
+    <string name="title_activity_meu2">Meu2</string>
+    <string name="title_activity_segundo_frgamen_lista">SegundoFrgamenLista</string>
 
 </resources>
