se termino el listar de restaurnates segun fecha registrada

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,13 +44,13 @@
     </string-array>
     <string-array name="shopping_item2">
         <item>Seleccione Dia</item>
-        <item>Domingo</item>
         <item>Lunes</item>
         <item>Martes</item>
-        <item>Miercoles</item>
+        <item>Miércoles</item>
         <item>Jueves</item>
         <item>Viernes</item>
-        <item>Sabado</item>
+        <item>Sábado</item>
+        <item>Domingo</item>
     </string-array>
 
     <string name="title_activity_listar_categoria">ListarCategoria</string>
@@ -65,5 +65,7 @@
     <string name="title_activity_menu2">Menu2</string>
     <string name="title_activity_meu2">Meu2</string>
     <string name="title_activity_segundo_frgamen_lista">SegundoFrgamenLista</string>
+    <string name="MenaRegistrODay">Es importante seleccionar el mismo día para el registro de entrada, segundos, bebidas y extras porque la
+        aplicación automáticamente mostrara en menú según el dia actual.</string>
 
 </resources>
